--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-輸入你開心的文字
-test ~~
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>測試</title>
+</head>
+<body>
+	
+</body>
+</html>
