--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="http://nick0916.github.io/haha/css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" href="http://nick0916.github.io/haha/css/style.css" />
+			<link rel="stylesheet" href="http://nick0916.github.io/haha/css/style-xlarge.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
