--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			</table>
 		</div>
-		<img id="head_picture" src="file:///Users/nick/Desktop/photo-1415931633537-351070d20b81.jpeg"/>
+		<img id="head_picture" src="photo-1415931633537-351070d20b81.jpeg"/>
 		<div class="test">
 		</div>
 
