update dynamic web

--- a/index.html
+++ b/index.html
@@ -2,22 +2,67 @@
 <html lang="en">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<head>
-		<div id="head">
-		</div>
+
 		<meta charset="UTF-8">
 		<title>成大工資管106廖嘉豪履歷</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script language = "javascript">
+			$(function(){
+	
+				$("#head_svg").click(function(){
+
+					$("html,body").animate({scrollTop:'0px'},1000);
+
+
+					return false;
+
+				});
+
+				$("#ab").click(function(){
+
+					$("html,body").animate({scrollTop:$('#about').offset().top},1000);
+
+
+					return false;
+
+				});
+
+				$("#sk").click(function(){
+
+					$("html,body").animate({scrollTop:$('#skill').offset().top},1000);
+
+
+					return false;
+
+				});
+
+				$("#ex").click(function(){
+
+					$("html,body").animate({scrollTop:$('#experience').offset().top},1000);
+
+
+					return false;
+
+				});
+
+			});
+		</script>
+
+
+		
+</head>
 	</head>
 	<body>
+		<div id="head">
+		</div>
 		<div class="head">
 			<div id="head_svg">
-				<a href="#head">
-				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 463.893 438.877" enable-background="new 0 0 463.893 438.877" xml:space="preserve"><path d="M232.272,88.949L79.937,223.837v192.749c0,4.979,4.023,8.971,9.001,8.971h95.205v-84.51c0-4.979,3.994-9,8.971-9h78.229  c4.978,0,8.97,4.021,8.97,9v84.51h95.235c4.979,0,8.972-3.992,8.972-8.971V223.779L232.272,88.949z M276.328,277.105h-85.096V224.74  h85.096V277.105z"></path><path d="M79.937,42.699h54.771l-0.479,32.438l-54.293,49.048V42.699z"></path><path d="M231.388,24.746L15.334,216.053l22.758,25.676l194.18-171.952l194.136,171.952l22.715-25.676L233.113,24.746  l-0.884-0.76L231.388,24.746z"></path></svg>
-				</a>
+ 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 463.893 438.877" enable-background="new 0 0 463.893 438.877" xml:space="preserve"><path d="M232.272,88.949L79.937,223.837v192.749c0,4.979,4.023,8.971,9.001,8.971h95.205v-84.51c0-4.979,3.994-9,8.971-9h78.229  c4.978,0,8.97,4.021,8.97,9v84.51h95.235c4.979,0,8.972-3.992,8.972-8.971V223.779L232.272,88.949z M276.328,277.105h-85.096V224.74  h85.096V277.105z"></path><path d="M79.937,42.699h54.771l-0.479,32.438l-54.293,49.048V42.699z"></path><path d="M231.388,24.746L15.334,216.053l22.758,25.676l194.18-171.952l194.136,171.952l22.715-25.676L233.113,24.746  l-0.884-0.76L231.388,24.746z"></path></svg>
 			</div>
 			<div id="head_word">
-				<h1><a href="#about">about</a></h1>
-				<h1><a href="#skill">skill</a></h1>
-				<h1><a href="#experience">experience</a></h1>
+				<h1 id="ab">about</h1>
+				<h1 id="sk">skill</h1>
+				<h1 id="ex">experience</h1>
 			</div>
 			
 		</div>
@@ -53,8 +98,7 @@
 						<ul>
 							<li>JAVA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;半年</li>
 							<li>c++&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一年</li>
-							<li>html&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;初學
-</li>
+							<li>html&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;初學</li>
 							<li>Css&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;初學</li>
 							<li>Javasript&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;初學</li>
 							<li>Jquery&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;初學</li>
